- Fixed bug #53903 (userspace stream stat callback does not separate the   elements of the returned array before converting them).